# convex_hull

./: CMakeLists.txt  LICENSE
include/: CMakeLists.txt
include/Polygon/: AlgoIterator.hpp  Line.hpp  Point.hpp  Polygon.cpp  Polygon.hpp  Step.hpp
server/: CMakeLists.txt  ServerApp.cpp
src/: CMakeLists.txt  main.cpp  main1.cpp
tests/: CMakeLists.txt  ConvexHullAlgoTests.cpp
